--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
+<head>
+  <title>Data Lounge</title>
+</head>
+
+<body>
+
+<!-- Site navigation menu -->
+<ul class="navbar">
+  <li><a href="index.html">Home page</a>
+  <li><a href="musings.html">Musings</a>
+  <li><a href="town.html">My town</a>
+  <li><a href="links.html">Links</a>
+</ul>
+
+<!-- Main content -->
 <div class="login-box">
   <h2>Login</h2>
   <form>
@@ -18,3 +35,6 @@
     </a>
   </form>
 </div>
+
+</body>
+</html>
