--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html PUBLIC "This my website. Its just a template">
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Data Lounge</title>
   <link rel="stylesheet" href="style.css">
   <script src="behavior.js"></script>
