--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- Main content -->
 <div class="login-box">
-  <h2>Login</h2>
+  <h2>Newsletter</h2>
   <form>
     <div class="user-box">
       <input type="text" name="" required="">
@@ -26,7 +26,7 @@
       <span></span>
       <span></span>
       <span></span>
-      Submit
+      Subscribe
     </a>
   </form>
 </div>
