--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
 <!-- Main content -->
 <div class="login-box">
-  <h2>Newsletter</h2>
+  <h2>Bet Arbitrage</h2>
   <form>
     <div class="user-box">
       <input type="text" name="" required="">
       <label>Username</label>
+    </div>
+    <input type="text" name="" required="">
+      <label>Mail</label>
     </div>
     <div class="user-box">
       <input type="password" name="" required="">
